--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 	<center><h2>Jeronimo Arcila Isaza</h2></center>
 	<center><h2>2021</h2></center>
 	<center><h2>Grado 8</h2></center>
-	<center><img src="avion.jpg"></center>
+	<center><img src="yo.jpeg"></center>
 	<hr>
 	<hr>
 	<center><h1 style="color: #FF0000">Periodos</h1></center>
-	<a href="p1.html">periodo 1</a>
-	<a href="p2.html">periodo 2</a>
-	<a href="p3.html">periodo 3</a>
-	<a href="p4.html">periodo 4</a>
+	<center><a href="p1.html"><img src="boton1.png"></a></center>
+	<center><a href="p2.html"><img src="boton2.png"></a></center>
+	<center><a href="p3.html"><img src="boton3.png"></a></center>
+	<center><a href="p4.html"><img src="boton4.png"></a></center>
+	<a href="https://jeronimo132.github.io/prueba/">Arcila Isaza Jerónimo</a><br>
 
 
 </body>
