--- a/p1.html
+++ b/p1.html
@@ -7,6 +7,13 @@
 	<img src="img1.jpeg">
 	<img src="img2.jpeg">
 <a href="index.html">volver</a>
+	<hr>
+<hr>
+<h1>parcial</h1>
+<img src="imagen1.JPG">
+<img src="imagen2.JPG">
+<img src="imagen3.JPG">
+<center><h2>la verdad me senti muy confundido, no sabia como hacerlo, en que posicion, lo hice lo mejor posible y espero mejorar en el tema de la programacion</h2></center>
 
 
 
