--- a/p1.html
+++ b/p1.html
@@ -14,7 +14,11 @@
 <img src="imagen2.JPG">
 <img src="imagen3.JPG">
 <center><h2>la verdad me senti muy confundido, no sabia como hacerlo, en que posicion, lo hice lo mejor posible y espero mejorar en el tema de la programacion</h2></center>
-
+<hr>
+<hr>
+<h1>actividad3</h1>
+<img src="actividadnota3.png">
+<center><h2>este ejercicio me parecio muy facil, ya que estuve atento a la clase, me demore 20 minutos hacerlo y no me dio mayor dificultad, me entretuve haciendolo y me parecio divertido</center></h2>
 
 
 </body>
