--- a/p1.html
+++ b/p1.html
@@ -19,7 +19,67 @@
 <h1>actividad3</h1>
 <img src="actividadnota3.png">
 <center><h2>este ejercicio me parecio muy facil, ya que estuve atento a la clase, me demore 20 minutos hacerlo y no me dio mayor dificultad, me entretuve haciendolo y me parecio divertido</center></h2>
+<hr>
+<hr>
+<hr>
+<hr>
+	<!DOCTYPE html>
+<html>
+<head>
+	<title>final tecnologiia semana 10</title>
+	<link rel="stylesheet" type="text/css" href="pagina2.css">
+</head>
+<body>
 
+	<div class="margen1"></div>
+
+	<div class="margen2"></div>
+
+	<div class="hijo">
+		<center>final tecnologia.</center>
+	</div>
+
+	<div class="segundotexto">
+	    <center>concurso de coplas</center>
+    </div>
+
+    <div class="tercertexto">
+    	<center>a la voz del carrnaval</center>
+    </div>
+
+    <div class="cuartotexto">
+    	<center>muestra de danza internacional</center>
+    </div>
+
+    <div class="imagen5">
+    	<div class="cuadro"></div>
+    </div>
+
+
+    <div class="imagen4">
+    	<div class="cuadro"></div>
+    </div>
+
+    <div class="imagen6">
+    	<div class="cuadro"></div>
+    </div>
+
+    <div class="viernes"></div>
+
+    <div class="chile"></div>
+
+    <div class="colombia"></div>
+
+    <div class="bolivia"></div>
+
+    <div class="ecuador"></div>
+
+    <div class="paraguay"></div>
+
+    <div class="uruguay"></div>
+
+</body>
+</html>
 
 </body>
 </html>
