--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<center><a href="p2.html"><img src="boton2.png"></a></center>
 	<center><a href="p3.html"><img src="boton3.png"></a></center>
 	<center><a href="p4.html"><img src="boton4.png"></a></center>
+	<center><a href="p4.html"><img src="sintitulo.png"></a></center>
 	<center><a href="final.html"></center>
 	<a href="https://jeronimo132.github.io/prueba/">Arcila Isaza Jerónimo</a><br>
 
